basic/basic-userdata/ec2-securitygp.tf
# Define AWS Security group
resource "aws_security_group" "Allow-http-ssh" {
  description = "Security group allow access on http and SSH"
  name = "Allow-http-ssh"
  ingress {
    description = "Allow ssh access"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow Http Access"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all outbound"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Allow Access"
    Craeted = "Terraform"
  }
}
